feat(deploy): add resource requests to all pods
CPU has been set to 10m for all pods. The following are the memory
requests:
olm-operator     160Mi
catalog-operator 80Mi
packageserver    50Mi
catalog sources  50Mi

Upstream-repository: operator-lifecycle-manager
Upstream-commit: c726141777b4fa7a012b15faa37e5aea489b4e1e

--- a/staging/operator-lifecycle-manager/deploy/chart/values.yaml
+++ b/staging/operator-lifecycle-manager/deploy/chart/values.yaml
@@ -18,6 +18,10 @@ olm:
     internalPort: 8080
   nodeSelector:
     beta.kubernetes.io/os: linux
+  resources:
+    requests:
+     cpu: 10m
+     memory: 160Mi
 
 catalog:
   replicaCount: 1
@@ -29,6 +33,10 @@ catalog:
     internalPort: 8080
   nodeSelector:
     beta.kubernetes.io/os: linux
+  resources:
+    requests:
+     cpu: 10m
+     memory: 80Mi
 
 package:
   replicaCount: 2
@@ -39,3 +47,7 @@ package:
     internalPort: 5443
   nodeSelector:
     beta.kubernetes.io/os: linux
+  resources:
+    requests:
+     cpu: 10m
+     memory: 50Mi
