--- a/staging/operator-lifecycle-manager/manifests/0000_50_olm_08-catalog-operator.deployment.yaml
+++ b/staging/operator-lifecycle-manager/manifests/0000_50_olm_08-catalog-operator.deployment.yaml
@@ -54,6 +54,11 @@ spec:
           - name: RELEASE_VERSION
             value: "0.0.1-snapshot"
           
+          resources:
+            requests:
+              cpu: 10m
+              memory: 80Mi
+            
           
           volumeMounts:
           - mountPath: /var/run/secrets/serving-cert
