--- a/staging/operator-lifecycle-manager/deploy/chart/templates/_packageserver.deployment-spec.yaml
+++ b/staging/operator-lifecycle-manager/deploy/chart/templates/_packageserver.deployment-spec.yaml
@@ -57,4 +57,8 @@ spec:
             path: /healthz
             port: {{ .Values.package.service.internalPort }}
         terminationMessagePolicy: FallbackToLogsOnError
+        {{- if .Values.package.resources }}
+        resources:
+{{ toYaml .Values.package.resources | indent 10 }}
+        {{- end}}
 {{- end -}}
