--- a/staging/operator-lifecycle-manager/manifests/0000_50_olm_07-olm-operator.deployment.yaml
+++ b/staging/operator-lifecycle-manager/manifests/0000_50_olm_07-olm-operator.deployment.yaml
@@ -61,6 +61,11 @@ spec:
                 fieldPath: metadata.namespace
           - name: OPERATOR_NAME
             value: olm-operator
+          resources:
+            requests:
+              cpu: 10m
+              memory: 160Mi
+            
           
           volumeMounts:
           - mountPath: /var/run/secrets/serving-cert
