fix(manifest): fix env var projection in command
the wrong brackets was causing the "cleanup" namespace to be set to ""
instead of the namespace where olm is deployed. this caused upgrade
failures when old artifacts weren't properly cleaned on startup.

Upstream-repository: operator-lifecycle-manager
Upstream-commit: 038f48db659d50779a2db71b019ba63b1a50db5e

--- a/staging/operator-lifecycle-manager/deploy/chart/templates/0000_50_olm_07-olm-operator.deployment.yaml
+++ b/staging/operator-lifecycle-manager/deploy/chart/templates/0000_50_olm_07-olm-operator.deployment.yaml
@@ -27,7 +27,7 @@ spec:
           - /bin/olm
           args:
           - -namespace
-          - ${OPERATOR_NAMESPACE}
+          - $(OPERATOR_NAMESPACE)
           {{- if .Values.watchedNamespaces }}
           - -watchedNamespaces
           - {{ .Values.watchedNamespaces }}
