--- a/staging/operator-lifecycle-manager/manifests/0000_50_olm_07-olm-operator.deployment.yaml
+++ b/staging/operator-lifecycle-manager/manifests/0000_50_olm_07-olm-operator.deployment.yaml
@@ -25,7 +25,7 @@ spec:
           - /bin/olm
           args:
           - -namespace
-          - ${OPERATOR_NAMESPACE}
+          - $(OPERATOR_NAMESPACE)
           - -writeStatusName
           - operator-lifecycle-manager
           - -writePackageServerStatusName
