feat(grpc): adds grpc source manager which notifies main controller when grpc events occur.
this removes a reliance on requeueing and should mean that catalog
behavior becomes more stable and never needs to wait for a full resync

Upstream-repository: operator-lifecycle-manager
Upstream-commit: f59c37a1a689d47f37cd7f93ba3e56d944c76371

--- a/staging/operator-lifecycle-manager/test/e2e/chart/templates/job.yaml
+++ b/staging/operator-lifecycle-manager/test/e2e/chart/templates/job.yaml
@@ -9,7 +9,7 @@ spec:
       containers:
       - name: e2e
         image:  {{ .Values.e2e.image.ref }}
-        command: ["go", "test", "-v", "-failfast", "-timeout", "50m", "./test/e2e/...", "-namespace=$(NAMESPACE)-operator", "-olmNamespace=$(NAMESPACE)"]
+        command: ["go", "test", "-v", "-failfast", "-timeout", "50m", "./test/e2e/...", "-namespace=$(NAMESPACE)-operator", "-olmNamespace=$(NAMESPACE)", " -dummyImage=hang:10"]
         env:
         - name: NAMESPACE
           valueFrom:
