--- a/staging/operator-lifecycle-manager/deploy/upstream/manifests/0.11.0/0000_50_olm_07-olm-operator.deployment.yaml
+++ b/staging/operator-lifecycle-manager/deploy/upstream/manifests/0.11.0/0000_50_olm_07-olm-operator.deployment.yaml
@@ -1,8 +1,10 @@
+##---
+# Source: olm/templates/0000_50_olm_07-olm-operator.deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: olm-operator
-  namespace: openshift-operator-lifecycle-manager
+  namespace: olm
   labels:
     app: olm-operator
 spec:
@@ -18,7 +20,6 @@ spec:
         app: olm-operator
     spec:
       serviceAccountName: olm-operator-serviceaccount
-      priorityClassName: "system-cluster-critical"
       containers:
         - name: olm-operator
           command:
@@ -27,13 +28,7 @@ spec:
           - -namespace
           - $(OPERATOR_NAMESPACE)
           - -writeStatusName
-          - operator-lifecycle-manager
-          - -writePackageServerStatusName
-          - operator-lifecycle-manager-packageserver
-          - -tls-cert
-          - /var/run/secrets/serving-cert/tls.crt
-          - -tls-key
-          - /var/run/secrets/serving-cert/tls.key
+          - ""
           image: quay.io/operator-framework/olm@sha256:81813ac9c937187c29e080c0975bb18489c1f232009c38c8d3a27bc9956ddd21
           imagePullPolicy: IfNotPresent
           ports:
@@ -52,9 +47,6 @@ spec:
           terminationMessagePolicy: FallbackToLogsOnError
           env:
         
-          - name: RELEASE_VERSION
-            value: "0.0.1-snapshot"
-        
           - name: OPERATOR_NAMESPACE
             valueFrom:
               fieldRef:
@@ -67,30 +59,7 @@ spec:
               memory: 160Mi
             
           
-          volumeMounts:
-          - mountPath: /var/run/secrets/serving-cert
-            name: serving-cert
-          
-      
-      volumes:
-      - name: serving-cert
-        secret:
-          secretName: olm-operator-serving-cert
       
       nodeSelector:
         beta.kubernetes.io/os: linux
-        node-role.kubernetes.io/master: ""
         
-      tolerations:
-      - effect: NoSchedule
-        key: node-role.kubernetes.io/master
-        operator: Exists
-      - effect: NoExecute
-        key: node.kubernetes.io/unreachable
-        operator: Exists
-        tolerationSeconds: 120
-      - effect: NoExecute
-        key: node.kubernetes.io/not-ready
-        operator: Exists
-        tolerationSeconds: 120
-      
