--- a/staging/operator-lifecycle-manager/deploy/upstream/quickstart/olm.yaml
+++ b/staging/operator-lifecycle-manager/deploy/upstream/quickstart/olm.yaml
@@ -66,9 +66,11 @@ spec:
           command:
           - /bin/olm
           args:
+          - -namespace
+          - $(OPERATOR_NAMESPACE)
           - -writeStatusName
           - ""
-          image: quay.io/operator-framework/olm@sha256:f965474776bada158e4bf7be5c84b54460843e7478f06060990d2fdeb31b0b90
+          image: quay.io/operator-framework/olm@sha256:81813ac9c937187c29e080c0975bb18489c1f232009c38c8d3a27bc9956ddd21
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
@@ -92,6 +94,11 @@ spec:
                 fieldPath: metadata.namespace
           - name: OPERATOR_NAME
             value: olm-operator
+          resources:
+            requests:
+              cpu: 10m
+              memory: 160Mi
+            
           
       
       nodeSelector:
@@ -126,7 +133,7 @@ spec:
           - '-namespace'
           - olm
           - -configmapServerImage=quay.io/operator-framework/configmap-operator-registry:latest
-          image: quay.io/operator-framework/olm@sha256:f965474776bada158e4bf7be5c84b54460843e7478f06060990d2fdeb31b0b90
+          image: quay.io/operator-framework/olm@sha256:81813ac9c937187c29e080c0975bb18489c1f232009c38c8d3a27bc9956ddd21
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
@@ -144,6 +151,11 @@ spec:
           terminationMessagePolicy: FallbackToLogsOnError
           env:
           
+          resources:
+            requests:
+              cpu: 10m
+              memory: 80Mi
+            
           
       
       nodeSelector:
@@ -181,148 +193,6 @@ rules:
   resources: ["packagemanifests"]
   verbs: ["get", "list", "watch"]
 ---
-kind: ConfigMap
-apiVersion: v1
-metadata:
-  name: olm-operators
-  namespace: olm
-data:
-  customResourceDefinitions: |-
-  clusterServiceVersions: |-
-    - apiVersion: operators.coreos.com/v1alpha1
-      kind: ClusterServiceVersion
-      metadata:
-        name: packageserver.v0.10.1
-        namespace: olm
-      spec:
-        displayName: Package Server
-        description: Represents an Operator package that is available from a given CatalogSource which will resolve to a ClusterServiceVersion.
-        minKubeVersion: 1.11.0
-        keywords: ['packagemanifests', 'olm', 'packages']
-        maintainers:
-        - name: Red Hat
-          email: openshift-operators@redhat.com
-        provider:
-          name: Red Hat
-        links:
-        - name: Package Server
-          url: https://github.com/operator-framework/operator-lifecycle-manager/tree/master/pkg/package-server
-        installModes:
-        - type: OwnNamespace
-          supported: true
-        - type: SingleNamespace
-          supported: true
-        - type: MultiNamespace
-          supported: true
-        - type: AllNamespaces
-          supported: true
-        install:
-          strategy: deployment
-          spec:
-            clusterPermissions:
-            - serviceAccountName: packageserver
-              rules:
-              - apiGroups:
-                  - authorization.k8s.io
-                resources:
-                  - subjectaccessreviews
-                verbs:
-                  - create
-                  - get
-              - apiGroups:
-                - ""
-                resources:
-                - configmaps
-                verbs:
-                - get
-                - list
-                - watch
-              - apiGroups:
-                - "operators.coreos.com"
-                resources:
-                - catalogsources
-                verbs:
-                - get
-                - list
-                - watch
-              - apiGroups:
-                - "packages.operators.coreos.com"
-                resources:
-                - packagemanifests
-                verbs:
-                - get
-                - list
-            deployments:
-            - name: packageserver
-              spec:
-                strategy:
-                  type: RollingUpdate
-                replicas: 2
-                selector:
-                  matchLabels:
-                    app: packageserver
-                template:
-                  metadata:
-                    labels:
-                      app: packageserver
-                  spec:
-                    serviceAccountName: packageserver
-                    nodeSelector:
-                      beta.kubernetes.io/os: linux
-                      
-                    containers:
-                    - name: packageserver
-                      command:
-                      - /bin/package-server
-                      - -v=4
-                      - --secure-port
-                      - "5443"
-                      - --global-namespace
-                      - olm
-                      image: quay.io/operator-framework/olm@sha256:f965474776bada158e4bf7be5c84b54460843e7478f06060990d2fdeb31b0b90
-                      imagePullPolicy: Always
-                      ports:
-                      - containerPort: 5443
-                      livenessProbe:
-                        httpGet:
-                          scheme: HTTPS
-                          path: /healthz
-                          port: 5443
-                      readinessProbe:
-                        httpGet:
-                          scheme: HTTPS
-                          path: /healthz
-                          port: 5443
-                      terminationMessagePolicy: FallbackToLogsOnError
-        maturity: alpha
-        version: 0.10.1
-        apiservicedefinitions:
-          owned:
-          - group: packages.operators.coreos.com
-            version: v1
-            kind: PackageManifest
-            name: packagemanifests
-            displayName: PackageManifest
-            description: A PackageManifest is a resource generated from existing CatalogSources and their ConfigMaps
-            deploymentName: packageserver
-            containerPort: 5443
-  packages: |-
-    - packageName: packageserver
-      channels:
-      - name: alpha
-        currentCSV: packageserver.v0.10.1
----
-apiVersion: operators.coreos.com/v1alpha1
-kind: CatalogSource
-metadata:
-  name: olm-operators
-  namespace: olm
-spec:
-  sourceType: internal
-  configMap: olm-operators
-  displayName: OLM Operators
-  publisher: Red Hat
----
 apiVersion: operators.coreos.com/v1
 kind: OperatorGroup
 metadata:
@@ -339,15 +209,129 @@ spec:
     - olm
 ---
 apiVersion: operators.coreos.com/v1alpha1
-kind: Subscription
+kind: ClusterServiceVersion
 metadata:
   name: packageserver
   namespace: olm
+  labels:
+    olm.version: 0.11.0
 spec:
-  source: olm-operators
-  sourceNamespace: olm
-  name: packageserver
-  channel: alpha
+  displayName: Package Server
+  description: Represents an Operator package that is available from a given CatalogSource which will resolve to a ClusterServiceVersion.
+  minKubeVersion: 1.11.0
+  keywords: ['packagemanifests', 'olm', 'packages']
+  maintainers:
+  - name: Red Hat
+    email: openshift-operators@redhat.com
+  provider:
+    name: Red Hat
+  links:
+  - name: Package Server
+    url: https://github.com/operator-framework/operator-lifecycle-manager/tree/master/pkg/package-server
+  installModes:
+  - type: OwnNamespace
+    supported: true
+  - type: SingleNamespace
+    supported: true
+  - type: MultiNamespace
+    supported: true
+  - type: AllNamespaces
+    supported: true
+  install:
+    strategy: deployment
+    spec:
+      clusterPermissions:
+      - serviceAccountName: olm-operator-serviceaccount
+        rules:
+        - apiGroups:
+            - authorization.k8s.io
+          resources:
+            - subjectaccessreviews
+          verbs:
+            - create
+            - get
+        - apiGroups:
+          - ""
+          resources:
+          - configmaps
+          verbs:
+          - get
+          - list
+          - watch
+        - apiGroups:
+          - "operators.coreos.com"
+          resources:
+          - catalogsources
+          verbs:
+          - get
+          - list
+          - watch
+        - apiGroups:
+          - "packages.operators.coreos.com"
+          resources:
+          - packagemanifests
+          verbs:
+          - get
+          - list
+      deployments:
+      - name: packageserver
+        spec:
+          strategy:
+            type: RollingUpdate
+          replicas: 2
+          selector:
+            matchLabels:
+              app: packageserver
+          template:
+            metadata:
+              labels:
+                app: packageserver
+            spec:
+              serviceAccountName: olm-operator-serviceaccount
+              nodeSelector:
+                beta.kubernetes.io/os: linux
+                
+              containers:
+              - name: packageserver
+                command:
+                - /bin/package-server
+                - -v=4
+                - --secure-port
+                - "5443"
+                - --global-namespace
+                - olm
+                image: quay.io/operator-framework/olm@sha256:81813ac9c937187c29e080c0975bb18489c1f232009c38c8d3a27bc9956ddd21
+                imagePullPolicy: Always
+                ports:
+                - containerPort: 5443
+                livenessProbe:
+                  httpGet:
+                    scheme: HTTPS
+                    path: /healthz
+                    port: 5443
+                readinessProbe:
+                  httpGet:
+                    scheme: HTTPS
+                    path: /healthz
+                    port: 5443
+                terminationMessagePolicy: FallbackToLogsOnError
+                resources:
+                  requests:
+                    cpu: 10m
+                    memory: 50Mi
+                  
+  maturity: alpha
+  version: 0.11.0
+  apiservicedefinitions:
+    owned:
+    - group: packages.operators.coreos.com
+      version: v1
+      kind: PackageManifest
+      name: packagemanifests
+      displayName: PackageManifest
+      description: A PackageManifest is a resource generated from existing CatalogSources and their ConfigMaps
+      deploymentName: packageserver
+      containerPort: 5443
 ---
 apiVersion: operators.coreos.com/v1alpha1
 kind: CatalogSource
