Bug 1702552: Two "NAME" fields by command "oc get catalogsource"
The NAME field is now corrected as DISPLAY in catalogsource CRD manifest.

Signed-off-by: Vu Dinh <vdinh@redhat.com>

Upstream-repository: operator-lifecycle-manager
Upstream-commit: 228af3e38dda13228e1beb456046d3a11cabbb6f

--- a/staging/operator-lifecycle-manager/deploy/chart/templates/0000_50_olm_06-catalogsource.crd.yaml
+++ b/staging/operator-lifecycle-manager/deploy/chart/templates/0000_50_olm_06-catalogsource.crd.yaml
@@ -23,7 +23,7 @@ spec:
     categories:
     - olm
   additionalPrinterColumns:
-  - name: Name
+  - name: Display
     type: string
     description: The pretty name of the catalog
     JSONPath: .spec.displayName
