--- a/staging/operator-lifecycle-manager/manifests/0000_50_olm_06-catalogsource.crd.yaml
+++ b/staging/operator-lifecycle-manager/manifests/0000_50_olm_06-catalogsource.crd.yaml
@@ -23,7 +23,7 @@ spec:
     categories:
     - olm
   additionalPrinterColumns:
-  - name: Name
+  - name: Display
     type: string
     description: The pretty name of the catalog
     JSONPath: .spec.displayName
