fix(deploy): change local deploy to use olm namespace
This aligns with the values used in deploy/upstream.

Upstream-repository: operator-lifecycle-manager
Upstream-commit: f6f0d7b20acbf85c5fae25c595a3c2dc4953b8d8

--- a/staging/operator-lifecycle-manager/Documentation/install/local-values.yaml
+++ b/staging/operator-lifecycle-manager/Documentation/install/local-values.yaml
@@ -1,9 +1,9 @@
 installType: upstream
 rbacApiVersion: rbac.authorization.k8s.io
-namespace: local
+namespace: olm
 writeStatusName: '""'
-catalog_namespace: local
-operator_namespace: local-operators
+catalog_namespace: olm
+operator_namespace: operators
 debug: true
 
 olm:
