(release) Generate manifests for 0.12.0
Upstream-repository: operator-lifecycle-manager
Upstream-commit: 65f896668a7d6a3a2f940051be51599d7a47ea21

--- a/staging/operator-lifecycle-manager/deploy/upstream/quickstart/olm.yaml
+++ b/staging/operator-lifecycle-manager/deploy/upstream/quickstart/olm.yaml
@@ -70,7 +70,7 @@ spec:
           - $(OPERATOR_NAMESPACE)
           - -writeStatusName
           - ""
-          image: quay.io/operator-framework/olm@sha256:81813ac9c937187c29e080c0975bb18489c1f232009c38c8d3a27bc9956ddd21
+          image: quay.io/operator-framework/olm@sha256:91ac5bf350192e063a3c1be994827f67e254997939eda3d471253777cc840c45
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
@@ -133,7 +133,7 @@ spec:
           - '-namespace'
           - olm
           - -configmapServerImage=quay.io/operator-framework/configmap-operator-registry:latest
-          image: quay.io/operator-framework/olm@sha256:81813ac9c937187c29e080c0975bb18489c1f232009c38c8d3a27bc9956ddd21
+          image: quay.io/operator-framework/olm@sha256:91ac5bf350192e063a3c1be994827f67e254997939eda3d471253777cc840c45
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
@@ -190,7 +190,7 @@ rules:
   resources: ["clusterserviceversions", "catalogsources", "installplans", "subscriptions", "operatorgroups"]
   verbs: ["get", "list", "watch"]
 - apiGroups: ["packages.operators.coreos.com"]
-  resources: ["packagemanifests"]
+  resources: ["packagemanifests", "packagemanifests/icon"]
   verbs: ["get", "list", "watch"]
 ---
 apiVersion: operators.coreos.com/v1
@@ -214,7 +214,7 @@ metadata:
   name: packageserver
   namespace: olm
   labels:
-    olm.version: 0.11.0
+    olm.version: 0.12.0
 spec:
   displayName: Package Server
   description: Represents an Operator package that is available from a given CatalogSource which will resolve to a ClusterServiceVersion.
@@ -300,7 +300,7 @@ spec:
                 - "5443"
                 - --global-namespace
                 - olm
-                image: quay.io/operator-framework/olm@sha256:81813ac9c937187c29e080c0975bb18489c1f232009c38c8d3a27bc9956ddd21
+                image: quay.io/operator-framework/olm@sha256:91ac5bf350192e063a3c1be994827f67e254997939eda3d471253777cc840c45
                 imagePullPolicy: Always
                 ports:
                 - containerPort: 5443
@@ -321,7 +321,7 @@ spec:
                     memory: 50Mi
                   
   maturity: alpha
-  version: 0.11.0
+  version: 0.12.0
   apiservicedefinitions:
     owned:
     - group: packages.operators.coreos.com
