--- a/staging/operator-lifecycle-manager/deploy/upstream/manifests/0.12.0/0000_50_olm_03-clusterserviceversion.crd.yaml
+++ b/staging/operator-lifecycle-manager/deploy/upstream/manifests/0.12.0/0000_50_olm_03-clusterserviceversion.crd.yaml
@@ -1,4 +1,5 @@
 ---
+# Source: olm/templates/0000_50_olm_03-clusterserviceversion.crd.yaml
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
@@ -41,6 +42,7 @@ spec:
       storage: true
   scope: Namespaced
   subresources:
+    # status enables the status subresource.
     status: {}
   validation:
     openAPIV3Schema:
@@ -764,488 +766,3 @@ spec:
         status:
           type: object
           description: Status for a ClusterServiceVersion
----
-apiVersion: apiextensions.k8s.io/v1beta1
-kind: CustomResourceDefinition
-metadata:
-  name: installplans.operators.coreos.com
-  annotations:
-    displayName: Install Plan
-    description: Represents a plan to install and resolve dependencies for Cluster Services
-spec:
-  group: operators.coreos.com
-  version: v1alpha1
-  versions:
-  - name: v1alpha1
-    served: true
-    storage: true
-  scope: Namespaced
-  names:
-    plural: installplans
-    singular: installplan
-    kind: InstallPlan
-    listKind: InstallPlanList
-    shortNames:
-    - ip
-    categories:
-    - olm
-  additionalPrinterColumns:
-  - name: CSV
-    type: string
-    description: The first CSV in the list of clusterServiceVersionNames
-    JSONPath: .spec.clusterServiceVersionNames[0]
-  - name: Approval
-    type: string
-    description: The approval mode
-    JSONPath: .spec.approval
-  - name: Approved
-    type: boolean
-    JSONPath: .spec.approved
-  subresources:
-    status: {}
-  validation:
-    openAPIV3Schema:
-      description: Represents a plan to install and resolve dependencies for Cluster Services.
-      properties:
-        spec:
-          type: object
-          description: Spec for an InstallPlan
-          required:
-          - clusterServiceVersionNames
-          - approval
-          properties:
-            source:
-              type: string
-              description: Name of the preferred CatalogSource
-            sourceNamespace:
-              type: string
-              description: Namespace that contains the preffered CatalogSource
-            clusterServiceVersionNames:
-              type: array
-              description: A list of the names of the Cluster Services
-              items:
-                type: string
-          anyOf:
-            - properties:
-                approval:
-                  enum:
-                    - Manual
-                approved:
-                  type: boolean
-              required:
-                - approved
-            - properties:
-                approval:
-                  enum:
-                    - Automatic
----
-apiVersion: apiextensions.k8s.io/v1beta1
-kind: CustomResourceDefinition
-metadata:
-  name: subscriptions.operators.coreos.com
-  annotations:
-    displayName: Subscription
-    description: Subscribes service catalog to a source and channel to recieve updates for packages.
-spec:
-  group: operators.coreos.com
-  version: v1alpha1
-  versions:
-  - name: v1alpha1
-    served: true
-    storage: true
-  scope: Namespaced
-  names:
-    plural: subscriptions
-    singular: subscription
-    kind: Subscription
-    listKind: SubscriptionList
-    shortNames:
-    - sub
-    - subs
-    categories:
-    - olm
-  additionalPrinterColumns:
-  - name: Package
-    type: string
-    description: The package subscribed to
-    JSONPath: .spec.name
-  - name: Source
-    type: string
-    description: The catalog source for the specified package
-    JSONPath: .spec.source
-  - name: Channel
-    type: string
-    description: The channel of updates to subscribe to
-    JSONPath: .spec.channel
-  subresources:
-    status: {}
-  validation:
-    openAPIV3Schema:
-      description: Subscribes service catalog to a source and channel to recieve updates for packages.
-      properties:
-        spec:
-          type: object
-          description: Spec for a Subscription
-          required:
-          - source
-          - name
-          properties:
-            source:
-              type: string
-              description: Name of a CatalogSource that defines where and how to find the channel
-            sourceNamespace:
-              type: string
-              description: The Kubernetes namespace where the CatalogSource used is located
-            name:
-              type: string
-              description: Name of the package that defines the application
-            channel:
-              type: string
-              description: Name of the channel to track
-            startingCSV:
-              type: string
-              description: Name of the AppType that this subscription tracks
-            installPlanApproval:
-              type: string
-              description: Approval mode for emitted InstallPlans
-              enum:
-              - Manual
-              - Automatic
-            config:
-              type: object
-              description: Operator Pod configuration, it is applied to the operator during install. It has higher precedence than the same configuration specified in a ClusterServiveVersion.
-              properties:
-                env:
-                  type: array
-                  description: List of environment variables to set in the container
-                  items:
-                    type: object
-                    description: EnvVar represents an environment variable present in a Container
-                    required:
-                      - name
-                    properties:
-                      name:
-                        type: string
-                        description: EnvVar represents an environment variable present in a Container
-                      value:
-                        type: string
-                        description: Value of the environment variable specified
-                      valueFrom:
-                        type: object
-                        description: Source for the environment variable's value. Cannot be used if value is not empty
-                        properties:
-                          configMapKeyRef:
-                            type: object
-                            description: Selects a key of a ConfigMap
-                            required:
-                              - key
-                            properties:
-                              key:
-                                type: string
-                                description: The key to select
-                              name:
-                                type: string
-                                description: "Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names"
-                              optional:
-                                type: boolean
-                                description: Specify whether the ConfigMap or its key must be defined
-                          fieldRef:
-                            type: object
-                            description: "Selects a field of the pod: supports metadata.name, metadata.namespace, metadata.labels, metadata.annotations, spec.nodeName, spec.serviceAccountName, status.hostIP, status.podIP"
-                            required:
-                              - fieldPath
-                            properties:
-                              apiVersion:
-                                type: string
-                                description: Version of the schema the FieldPath is written in terms of, defaults to v1
-                              fieldPath:
-                                type: string
-                                description: Path of the field to select in the specified API version
-                          resourceFieldRef:
-                            type: object
-                            description: "Selects a resource of the container: only resources limits and requests (limits.cpu, limits.memory, limits.ephemeral-storage, requests.cpu, requests.memory and requests.ephemeral-storage) are currently supported."
-                            required:
-                              - resource
-                            properties:
-                              containerName:
-                                type: string
-                                description: "Container name: required for volumes, optional for env vars"
-                              divisor:
-                                type: string
-                                description: Specifies the output format of the exposed resources, defaults to 1
-                              resource:
-                                type: string
-                                description: "Required: resource to select"
-                          secretKeyRef:
-                            type: object
-                            description: Selects a key of a secret in the pod's namespace
-                            required:
-                              - key
-                            properties:
-                              key:
-                                type: string
-                                description: The key of the secret to select from.  Must be a valid secret key
-                              name:
-                                type: string
-                                description: "Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names"
-                              optional:
-                                type: boolean
-                                description: Specify whether the Secret or its key must be defined
-                envFrom:
-                  type: array
-                  description: "List of sources to populate environment variables in the container. The keys defined within a source must be a C_IDENTIFIER. All invalid keys will be reported as an event when the container is starting. When a key exists in multiple sources, the value associated with the last source will take precedence. Values defined by an Env with a duplicate key will take precedence. Cannot be updated"
-                  items:
-                    type: object
-                    description: EnvFromSource represents the source of a set of ConfigMaps
-                    properties:
-                      configMapRef:
-                        type: object
-                        description: "ConfigMapEnvSource selects a ConfigMap to populate the environment variables with.\n\nThe contents of the target ConfigMap's Data field will represent the key-value pairs as environment variables"
-                        properties:
-                          name:
-                            type: string
-                            description: "Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names"
-                          optional:
-                            type: boolean
-                            description: Specify whether the ConfigMap must be defined
-                      prefix:
-                        type: string
-                        description: An optional identifier to prepend to each key in the ConfigMap. Must be a C_IDENTIFIER
-                      secretRef:
-                        type: object
-                        description: "SecretEnvSource selects a Secret to populate the environment variables with.\n\nThe contents of the target Secret's Data field will represent the key-value pairs as environment variables"
-                        properties:
-                          name:
-                            type: string
-                            description: "Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names"
-                          optional:
-                            type: boolean
-                            description: Specify whether the Secret must be defined
-
----
-apiVersion: apiextensions.k8s.io/v1beta1
-kind: CustomResourceDefinition
-metadata:
-  name: catalogsources.operators.coreos.com
-  annotations:
-    displayName: CatalogSource
-    description: A source configured to find packages and updates.
-spec:
-  group: operators.coreos.com
-  version: v1alpha1
-  versions:
-  - name: v1alpha1
-    served: true
-    storage: true
-  scope: Namespaced
-  names:
-    plural: catalogsources
-    singular: catalogsource
-    kind: CatalogSource
-    listKind: CatalogSourceList
-    shortNames:
-    - catsrc
-    categories:
-    - olm
-  additionalPrinterColumns:
-  - name: Display
-    type: string
-    description: The pretty name of the catalog
-    JSONPath: .spec.displayName
-  - name: Type
-    type: string
-    description: The type of the catalog
-    JSONPath: .spec.sourceType
-  - name: Publisher
-    type: string
-    description: The publisher of the catalog
-    JSONPath: .spec.publisher
-  - name: Age
-    type: date
-    JSONPath: .metadata.creationTimestamp
-  subresources:
-    status: {}
-  validation:
-    openAPIV3Schema:
-      description: A source configured to find packages and updates.
-      properties:
-        spec:
-          type: object
-          description: Spec for a catalog source.
-          required:
-          - sourceType
-          properties:
-            sourceType:
-              type: string
-              description: The type of the source. `configmap` is the new name for `internal`
-              enum:
-              - internal   # deprecated
-              - configmap
-              - grpc
-
-            configMap:
-              type: string
-              description: The name of a ConfigMap that holds the entries for an in-memory catalog.
-
-            address:
-              type: string
-              description: An optional address. When set, directs OLM to connect to use a pre-existing registry server at this address.
-
-            image:
-              type: string
-              description: An image that serves a grpc registry. Only valid for `grpc` sourceType. If both image and address are set, OLM does not use the address field.
-
-            displayName:
-              type: string
-              description: Pretty name for display
-
-            publisher:
-              type: string
-              description: The name of an entity that publishes this catalog
-
-            secrets:
-              type: array
-              description: A set of secrets that can be used to access the contents of the catalog. It is best to keep this list small, since each will need to be tried for every catalog entry.
-              items:
-                type: string
-                description: A name of a secret in the namespace where the CatalogSource is defined.
-        status:
-          type: object
-          description: The status of the CatalogSource
-          properties:
-            configMapReference:
-              type: object
-              description: If sourceType is `internal` or `configmap`, then this holds a reference to the configmap associated with this CatalogSource.
-              properties:
-                name:
-                  type: string
-                  description: name of the configmap
-                namespace:
-                  type: string
-                  description: namespace of the configmap
-                resourceVersion:
-                  type: string
-                  description: resourceVersion of the configmap
-                uid:
-                  type: string
-                  description: uid of the configmap
-            registryService:
-              type: object
-              properties:
-                protocol:
-                  type: string
-                  description: protocol of the registry service
-                  enum:
-                    - grpc
-                serviceName:
-                  type: string
-                  description: name of the registry service
-                serviceNamespace:
-                  type: string
-                  description: namespace of the registry service
-                port:
-                  type: string
-                  description: port of the registry service
-            lastSync:
-                type: string
-                description: the last time the catalog was updated. If this time is less than the last updated time on the object, the catalog will be re-cached.
-
----
-apiVersion: apiextensions.k8s.io/v1beta1
-kind: CustomResourceDefinition
-metadata:
-  name: operatorgroups.operators.coreos.com
-spec:
-  group: operators.coreos.com
-  version: v1
-  versions:
-    - name: v1
-      served: true
-      storage: true
-    - name: v1alpha2
-      served: true
-      storage: false
-  names:
-    plural: operatorgroups
-    singular: operatorgroup
-    kind: OperatorGroup
-    listKind: OperatorGroupList
-    shortNames:
-      - og
-    categories:
-      - olm
-  scope: Namespaced
-  subresources:
-    status: {}
-  validation:
-    openAPIV3Schema:
-      description: A grouping of namespaces for usage with an operator.
-      properties:
-        spec:
-          type: object
-          description: Spec for an OperatorGroup.
-          properties:
-            selector:
-              type: object
-              description: Optional label selector to find resources associated with or managed by the operator
-              anyOf:
-                - properties:
-                    matchLabels:
-                      type: object
-                      description: Label key:value pairs to match directly
-                  required:
-                    - matchLabels
-                - properties:
-                    matchExpressions:
-                      type: array
-                      description: A set of expressions to match against the resource.
-                      items:
-                        allOf:
-                          - type: object
-                            required:
-                            - key
-                            - operator
-                            - values
-                            properties:
-                              key:
-                                type: string
-                                description: the key to match
-                              operator:
-                                type: string
-                                description: the operator for the expression
-                                enum:
-                                - In
-                                - NotIn
-                                - Exists
-                                - DoesNotExist
-                              values:
-                                type: array
-                                description: set of values for the expression
-                  required:
-                    - matchExpressions
-            targetNamespaces:
-              type: array
-              description: Optional list of target namespaces. If set, OLM will ignore selector.
-              items:
-                type: string
-                pattern: ^\S+$
-            serviceAccountName:
-              type: string
-            staticProvidedAPIs:
-              type: boolean
-              description: If true, OLM will not modify the OperatorGroup's providedAPIs annotation.
-        status:
-          type: object
-          description: The status of the OperatorGroup.
-          properties:
-            lastUpdated:
-              format: date-time
-              type: string
-            namespaces:
-              items:
-                type: string
-              type: array
-          required:
-          - lastUpdated
-      required:
-      - metadata
