refactor(resolve): simplify bundle lookups
Upstream-repository: operator-lifecycle-manager
Upstream-commit: e8b9580c62b88846d109a2a5dded25ac530ff799

--- a/staging/operator-lifecycle-manager/deploy/chart/templates/0000_50_olm_04-installplan.crd.yaml
+++ b/staging/operator-lifecycle-manager/deploy/chart/templates/0000_50_olm_04-installplan.crd.yaml
@@ -126,6 +126,87 @@ spec:
                 uid:
                   description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                   type: string
+            bundleLookups:
+              type: array
+              items:
+                type: object
+                required:
+                - catalogSourceRef
+                - path
+                - replaces
+                properties:
+                  catalogSourceRef:
+                    description: ObjectReference contains enough information to let
+                      you inspect or modify the referred object.
+                    type: object
+                    properties:
+                      apiVersion:
+                        description: API version of the referent.
+                        type: string
+                      fieldPath:
+                        description: 'If referring to a piece of an object instead
+                          of an entire object, this string should contain a valid
+                          JSON/Go field access statement, such as desiredState.manifest.containers[2].
+                          For example, if the object reference is to a container within
+                          a pod, this would take on a value like: "spec.containers{name}"
+                          (where "name" refers to the name of the container that triggered
+                          the event) or if no container name is specified "spec.containers[2]"
+                          (container with index 2 in this pod). This syntax is chosen
+                          only to have some well-defined way of referencing a part
+                          of an object. TODO: this design is not final and this field
+                          is subject to change in the future.'
+                        type: string
+                      kind:
+                        description: 'Kind of the referent. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+                        type: string
+                      name:
+                        description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
+                        type: string
+                      namespace:
+                        description: 'Namespace of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/'
+                        type: string
+                      resourceVersion:
+                        description: 'Specific resourceVersion to which this reference
+                          is made, if any. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency'
+                        type: string
+                      uid:
+                        description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
+                        type: string
+                  conditions:
+                    type: array
+                    items:
+                      type: object
+                      required:
+                      - status
+                      - type
+                      properties:
+                        lastTransitionTime:
+                          description: Last time the condition transitioned from one
+                            status to another.
+                          type: string
+                          format: date-time
+                        lastUpdateTime:
+                          description: Last time the condition was probed
+                          type: string
+                          format: date-time
+                        message:
+                          description: A human readable message indicating details
+                            about the transition.
+                          type: string
+                        reason:
+                          description: The reason for the condition's last transition.
+                          type: string
+                        status:
+                          description: Status of the condition, one of True, False,
+                            Unknown.
+                          type: string
+                        type:
+                          description: Type of condition.
+                          type: string
+                  path:
+                    type: string
+                  replaces:
+                    type: string
             catalogSources:
               type: array
               items:
