Generate manifests for version 0.14.1.
Upstream-repository: operator-lifecycle-manager
Upstream-commit: 713cac31832146635d49c95022dd897a525ff019

--- a/staging/operator-lifecycle-manager/deploy/ocp/manifests/0.14.1/0000_50_olm_07-olm-operator.deployment.yaml
+++ b/staging/operator-lifecycle-manager/deploy/ocp/manifests/0.14.1/0000_50_olm_07-olm-operator.deployment.yaml
@@ -1,34 +1,37 @@
+---
+# Source: olm/templates/0000_50_olm_07-olm-operator.deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: catalog-operator
+  name: olm-operator
   namespace: openshift-operator-lifecycle-manager
   labels:
-    app: catalog-operator
+    app: olm-operator
 spec:
   strategy:
     type: RollingUpdate
   replicas: 1
   selector:
     matchLabels:
-      app: catalog-operator
+      app: olm-operator
   template:
     metadata:
       labels:
-        app: catalog-operator
+        app: olm-operator
     spec:
       serviceAccountName: olm-operator-serviceaccount
       priorityClassName: "system-cluster-critical"
       containers:
-        - name: catalog-operator
+        - name: olm-operator
           command:
-          - /bin/catalog
+          - /bin/olm
           args:
-          - '-namespace'
-          - openshift-marketplace
-          - -configmapServerImage=quay.io/operator-framework/configmap-operator-registry:latest
+          - -namespace
+          - $(OPERATOR_NAMESPACE)
           - -writeStatusName
-          - operator-lifecycle-manager-catalog
+          - operator-lifecycle-manager
+          - -writePackageServerStatusName
+          - operator-lifecycle-manager-packageserver
           - -tls-cert
           - /var/run/secrets/serving-cert/tls.crt
           - -tls-key
@@ -50,14 +53,20 @@ spec:
               port: 8080
           terminationMessagePolicy: FallbackToLogsOnError
           env:
-          
+        
           - name: RELEASE_VERSION
             value: "0.0.1-snapshot"
-          
+        
+          - name: OPERATOR_NAMESPACE
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.namespace
+          - name: OPERATOR_NAME
+            value: olm-operator
           resources:
             requests:
               cpu: 10m
-              memory: 80Mi
+              memory: 160Mi
           
           volumeMounts:
           - mountPath: /var/run/secrets/serving-cert
@@ -67,7 +76,7 @@ spec:
       volumes:
       - name: serving-cert
         secret:
-          secretName: catalog-operator-serving-cert
+          secretName: olm-operator-serving-cert
       
       nodeSelector:
         beta.kubernetes.io/os: linux
