--- a/staging/operator-lifecycle-manager/deploy/upstream/manifests/0.14.1/0000_50_olm_15-packageserver.clusterserviceversion.yaml
+++ b/staging/operator-lifecycle-manager/deploy/upstream/manifests/0.14.1/0000_50_olm_15-packageserver.clusterserviceversion.yaml
@@ -1,11 +1,12 @@
+---
+# Source: olm/templates/0000_50_olm_15-packageserver.clusterserviceversion.yaml
 apiVersion: operators.coreos.com/v1alpha1
 kind: ClusterServiceVersion
 metadata:
   name: packageserver
-  namespace: openshift-operator-lifecycle-manager
+  namespace: olm
   labels:
     olm.version: 0.14.1
-    olm.clusteroperator.name: operator-lifecycle-manager-packageserver
 spec:
   displayName: Package Server
   description: Represents an Operator package that is available from a given CatalogSource which will resolve to a ClusterServiceVersion.
@@ -79,22 +80,8 @@ spec:
                 app: packageserver
             spec:
               serviceAccountName: olm-operator-serviceaccount
-              priorityClassName: "system-cluster-critical"
               nodeSelector:
                 beta.kubernetes.io/os: linux
-                node-role.kubernetes.io/master: ""
-              tolerations:
-              - effect: NoSchedule
-                key: node-role.kubernetes.io/master
-                operator: Exists
-              - effect: NoExecute
-                key: node.kubernetes.io/unreachable
-                operator: Exists
-                tolerationSeconds: 120
-              - effect: NoExecute
-                key: node.kubernetes.io/not-ready
-                operator: Exists
-                tolerationSeconds: 120
               containers:
               - name: packageserver
                 command:
@@ -103,9 +90,9 @@ spec:
                 - --secure-port
                 - "5443"
                 - --global-namespace
-                - openshift-marketplace
+                - olm
                 image: quay.io/operator-framework/olm@sha256:0d15ffb5d10a176ef6e831d7865f98d51255ea5b0d16403618c94a004d049373
-                imagePullPolicy: IfNotPresent
+                imagePullPolicy: Always
                 ports:
                 - containerPort: 5443
                 livenessProbe:
