manifests(prometheus): failing operators should be a warning
Upstream-repository: operator-lifecycle-manager
Upstream-commit: 703e11d2d06757b63bd38d4a484fac4d7cbcdde1

--- a/staging/operator-lifecycle-manager/deploy/chart/templates/0000_90_olm_01-prometheus-rule.yaml
+++ b/staging/operator-lifecycle-manager/deploy/chart/templates/0000_90_olm_01-prometheus-rule.yaml
@@ -16,5 +16,5 @@ spec:
             message: Failed to install Operator {{ printf "{{ $labels.name }}"  }} version {{ printf "{{ $labels.version }}"  }}. Reason-{{ printf "{{ $labels.reason }}" }}
           expr: csv_abnormal{phase="Failed"}
           labels:
-            severity: info
+            severity: warning
 {{ end }}
