--- a/staging/operator-lifecycle-manager/manifests/0000_90_olm_01-prometheus-rule.yaml
+++ b/staging/operator-lifecycle-manager/manifests/0000_90_olm_01-prometheus-rule.yaml
@@ -15,4 +15,4 @@ spec:
             message: Failed to install Operator {{ $labels.name }} version {{ $labels.version }}. Reason-{{ $labels.reason }}
           expr: csv_abnormal{phase="Failed"}
           labels:
-            severity: info
+            severity: warning
