refactor(image): add image reference interface
- Add image.Reference interface and SimpleReference implementation as
  parameters of image.Registry methods (in place of strings)
- Refactor image.Registry tests into suite
- Add registry implementation notes
- Remove buildah from builds (Note: should be re-added once it's
  complete)

Upstream-repository: operator-registry
Upstream-commit: a5f3ef36cc7a29fedc56a54146e179d6deb4dc1a

--- a/staging/operator-registry/.gitignore
+++ b/staging/operator-registry/.gitignore
@@ -451,5 +451,13 @@ bin
 *.db
 *.db-journal
 
-# Igore apprclient meta
+# Ignore vscode
+.vscode
+
+# Ignore apprclient meta
 pkg/apprclient/openapi/git_push.sh
+
+# Never ignore testdata
+!pkg/**/testdata/**
+!test/**testdata/**
+
