fix(operators): sync v1alpha1 types with olm repo
Sync type definitions with the latest from OLM's repo. Update deepcopy
and manifests to match.

Upstream-repository: api
Upstream-commit: 4193f31e3fccd6f3655894badb156f90bd26675a

--- a/staging/api/crds/operators.coreos.com_catalogsources.yaml
+++ b/staging/api/crds/operators.coreos.com_catalogsources.yaml
@@ -168,10 +168,10 @@ spec:
               format: date-time
             message:
               description: A human readable message indicating details about why the
-                ClusterServiceVersion is in this condition.
+                CatalogSource is in this condition.
               type: string
             reason:
-              description: Reason is the reason the Subscription was transitioned
+              description: Reason is the reason the CatalogSource was transitioned
                 to its current state.
               type: string
             registryService:
