feat(operators): add v2alpha1 operator controller
Add support for reconciling the v2alpha1 Operator API:
- generate Operator resources when none exist and labeled components
  found
- aggregate component references in the status of their respective
  Operators
- aggregate component status conditions to their respective Operators
- enabled by specifying the "OperatorLifecycleManagerV2" feature gate option
  when invoking the olm command

Also:
- regenerate clients and fakes

Upstream-repository: operator-lifecycle-manager
Upstream-commit: a35b4d0a552cf3859b86aae8d439beb5ee82e9f4

--- a/staging/operator-lifecycle-manager/deploy/chart/templates/0000_50_olm_07-olm-operator.deployment.yaml
+++ b/staging/operator-lifecycle-manager/deploy/chart/templates/0000_50_olm_07-olm-operator.deployment.yaml
@@ -26,32 +26,32 @@ spec:
           command:
           - /bin/olm
           args:
-          - -namespace
+          - --namespace
           - $(OPERATOR_NAMESPACE)
           {{- if .Values.watchedNamespaces }}
-          - -watchedNamespaces
+          - --watchedNamespaces
           - {{ .Values.watchedNamespaces }}
           {{- end }}
           {{- if .Values.olm.commandArgs }}
           - {{ .Values.olm.commandArgs }}
           {{- end }}
           {{- if .Values.debug }}
-          - -debug
+          - --debug
           {{- end }}
           {{- if .Values.writeStatusName }}
-          - -writeStatusName
+          - --writeStatusName
           - {{ .Values.writeStatusName }}
           {{- end }}
           {{- if .Values.writePackageServerStatusName }}
-          - -writePackageServerStatusName
+          - --writePackageServerStatusName
           - {{ .Values.writePackageServerStatusName }}
           {{- end }}
           {{- if .Values.olm.tlsCertPath }}
-          - -tls-cert
+          - --tls-cert
           - {{ .Values.olm.tlsCertPath }}
           {{- end }}
           {{- if .Values.olm.tlsKeyPath }}
-          - -tls-key
+          - --tls-key
           - {{ .Values.olm.tlsKeyPath }}
           {{- end }}
           image: {{ .Values.olm.image.ref }}
